@@ -6,36 +6,38 @@ use Test::More 0.96 import => ['!pass'];
 use MongoDB 0.45;
 use MongoDBx::Queue;
 
-my $conn = eval { MongoDB::Connection->new; };
-plan skip_all => "No MongoDB on localhost" unless $conn;
+my $client = eval { MongoDB::MongoClient->new; };
+plan skip_all => "No MongoDB on localhost" unless $client;
 
 my $db_name = 'test_dancer_plugin_queue_mongodb';
 
 # make sure we clean up from prior runs
-my $db   = $conn->get_database($db_name);
+my $db   = $client->get_database($db_name);
 my $coll = $db->get_collection('queue');
 $coll->drop;
 
 {
 
-  use Dancer;
-  use Dancer::Plugin::Queue;
+    use Dancer;
+    use Dancer::Plugin::Queue;
 
-  set plugins => {
-    Queue => {
-      default => {
-        class   => 'MongoDB',
-        options => { db_name => $db_name },
-      },
-    }
-  };
+    set plugins => {
+        Queue => {
+            default => {
+                class   => 'MongoDB',
+                options => { db_name => $db_name },
+            },
+        }
+    };
 
-  get '/add' => sub {
-    queue->add_msg( params->{msg} );
-    my ( $msg, $body ) = queue->get_msg;
-    queue->remove_msg($msg);
-    return $body;
-  };
+    get '/add' => sub {
+        queue->add_msg( params->{msg} );
+        my ( $msg, $body ) = queue->get_msg;
+        queue->remove_msg($msg);
+        return $body;
+        return "Hello World";
+    };
+
 }
 
 use Dancer::Test;
