@@ -2,7 +2,10 @@ Revision history for Dancer-Plugin-Queue-MongoDB
 
 {{$NEXT}}
 
+    - Updated to use new MongoDB::MongoClient class instead of
+      MongoDB::Connection
+
 0.001     2012-12-13 23:02:25 America/New_York
 
-  - First release
+    - First release
 
